--- a/notebook.html
+++ b/notebook.html
@@ -9,14 +9,14 @@ title: Lab Notebook
     {% for post in site.posts %}
     {% assign author = site.authors | where: 'short_name', page.author | first %}
     <li>
-        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+        <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
         {% if author %}
-            - <a href="{{ author.url }}"><b>{{ author.name }}</b></a>
+            - <a href="{{ site.baseurl }}{{ author.url }}"><b>{{ author.name }}</b></a>
         {% endif %}
         <p>tags: [
             {% for tag in post.tags %}
               {% capture tag_name %}{{ tag }}{% endcapture %}
-              <a href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
+              <a href="{{ site.baseurl }}/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
             {% endfor %}
         ]</p>            
         <p>{{ post.excerpt }}</p>
