--- a/notebook.html
+++ b/notebook.html
@@ -7,16 +7,15 @@ title: Lab Notebook
 
 <ul>
     {% for post in site.posts %}
-    {% assign author = site.authors | where: 'short_name', page.author | first %}
     <li>
         <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
-        {% if author %}
-            - <a href="{{ site.baseurl }}{{ author.url }}"><b>{{ author.name }}</b></a>
+        {% if post.author %}
+            <b>{{ post.author }}</b>
         {% endif %}
         <p>tags: [
             {% for tag in post.tags %}
               {% capture tag_name %}{{ tag }}{% endcapture %}
-              <a href="{{ site.baseurl }}/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
+              <a href="{{ site.baseurl }}/tags.html#{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
             {% endfor %}
         ]</p>            
         <p>{{ post.excerpt }}</p>
